# Spam_detector

./: CMakeLists.txt  DoxygenConfig  README.md  Spam_Detector.pro  browser.h  main.cpp  mainwindow.cpp  mainwindow.h  method.cpp  method.h  res.qrc  spamdetector.ui  textclass.cpp  textclass.h  ui_spamdetector.h  untitled1.pro  untitled1.pro.user.0377a72
_build/: spam.csv
build-untitled1-Desktop_Qt_5_8_0_MinGW_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_spamdetector.h
build-untitled1-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp
debug/: moc_mainwindow.cpp
src/: Spam_Detector.pro  main.cpp  mainwindow.cpp  mainwindow.h  textclass.h
src/Browser/: browser.cpp  browser.h
src/Forms/: spamdetector.ui
src/MainWindow/: mainwindow.cpp  mainwindow.h
src/Method/: method.cpp  method.h
src/Table/: table.cpp  table.h
src/TextClass/: textclass.cpp  textclass.h
test/: unittest.cpp  unittest.h
test/TestSpamDetector/: TestSpamDetector.pro  tst_testspamdetectortest.cpp
